entity 및 enum 생성